2010-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (validate_hosts_parameter): Limit CIDR mask to 20.

2010-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Add CVSS alongside result NVT name.

2010-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-config-family-table): Align CVSS right.

2010-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (risk_factor): New template.
	(html-config-family-table): Replace risk colour coding with "Risk" column.

2010-05-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad.c (init_validator): Expand search phrase validator to allow
	punctuation characters and German umlauts.

2010-05-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (nvt): Add CVSS base and risk factor.

2010-05-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsa-style.css (div.Critical, div.High, div.Medium, div.Low)
	(div.None): New rules.

	* src/html/omp.xsl (html-config-family-table): Add CVSS column, coloured
	according to risk factor.

2010-05-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (edit-config-preference): Make password entry like file
	entry.  Only show the download button for file prefs.

2010-05-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (tasks.html): Describe the new stopped and pause
	progress bars.  Improve the "running" description a little.

2010-05-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Skip NVT header line if OID is 0.

2010-05-11  Matthew Mundell <matthew.mundell@greenbone.net>

	Add downloading of file preferences.

	* src/gsad.c (init_validator): Add export_preference_file command.
	(exec_omp_get): Add export_preference_file handling.

	* src/gsad_omp.c (export_preference_file_omp): New function.